--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -120,6 +120,8 @@
 \PersonalEntry{Address}{5000 Cordoba, Argentina}
 \PersonalEntry{Phone}{(000) 000-0000}
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
+\PersonalEntry{Website}{\url{https://www.palminio.com}}
+\PersonalEntry{linkedin}{\url{https://www.linkedin.com}}
 
 %%% Education
 %%% ------------------------------------------------------------
@@ -141,44 +143,79 @@
 %%% ------------------------------------------------------------
 \NewPart{Work experience}{}
 
-\EducationEntry{Company}{2011-present}{job}{Description}
+%2014-2015 Globant (globant.com) Software Engineer.
+\EducationEntry{Globant}{2015-present}{Technical Leader, Focal point and Java developer}
+{Technical Lead on Perl/Java Technologies in a context of LAN airline at Globant Company. The Perl Technologies used was Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Project related to data collection from web site to send to Google Analytic.}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2012-2014 IBA Entertainment limited as Software Engineer Freelancer.
+\EducationEntry{IBA Entertainment limited}{2012-2014}{Software Engineer Freelancer}
+{Software Engineer (as Contractor Freelancer) on Perl Technologies in a context of sportsbetting (Bet3000.com). Some technologies: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Development in Bet3000 Project (www.bet3000.com) to International Betting Association.}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2013-2014 Make IT Coop. As Associate, Secretary
+\EducationEntry{Make IT Coop.}{2013-2014}{Associate, Secretary}{
+Software Engineer}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2008-2010 Motorola Mobility as Software Engineer.
+\EducationEntry{Motorola Mobility}{2008-2010}{Software Engineer}
+{Software Engineering on Java Technologies (J2EE in a context of telecommunications mobile devices) at Motorola Mobility of Argentina S.A.}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2008-2010 Motorola S.C.A (Contractor Vates) as Software Engineer.
+\EducationEntry{Motorola S.C.A (Contractor Vates)}{2008-2010}{Software Engineer}
+{Java development (J2SE and J2EE in a context of telecommunications mobile devices)}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2008 Vates (www.vates.com) as Systems Engineer.
+\EducationEntry{Vates}{2008}{Systems Engineer}
+{Java Developer in context of system business process management.}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2007 Santex America S.A. (santexgroup.com) as Software Engineer: Java Developer.
+\EducationEntry{Santex America S.A.}{2007}{Software Engineer, Java Developer}
+{1) Java Developer in context of system business process management. 2) Instructor of "Oracle 9i: Build J2EE Applications" at InMotion, Santiago de Chile (Chile);
+3) Instructor of "Oracle AS 10g: R3 Build J2EE Applications" at Oracle, Buenos Aires (Arg.).}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2007 AYI & Asociados (BADI S.R.L) as Software Engineer: Java Developer, Computer Consultant Java.
+\EducationEntry{AYI and Asociados (BADI S.R.L)}{2007}{Software Engineer, Java Developer, Computer Consultant Java}
+{Oracle Java Developer (J2EE) in context of credit card company (Tarjeta Naranja).}
 \sepspace
 
-\EducationEntry{Company}{2011}{job}{Description}
+%2006 Informatic forensics – Tribunal third in Comodoro Rivadavia City: Informatic Forensics.
+\EducationEntry{Tribunal third in Comodoro Rivadavia}{2006}{Informatic forensics}{
+Tribunal third in Comodoro Rivadavia City: Informatic Forensics}
 \sepspace
 
+%2004-2006 24 months in Municipality of Comodoro Rivadavia city, Systems Engineer Juridical Informatics, Technical Leader.
+\EducationEntry{Municipality of Comodoro Rivadavia}{2004-2006}{Systems Engineer Juridical Informatics, Technical Leader}
+{Technical lead at Digesto Project (and VB Developer and PHP Developer) in context of legal area (Asesoría letrada) of a town hall (Municipality).}
+\sepspace
 
+%2004-2005 Teacher Mathematic Teacher, Software Teacher, Computation Teacher.
+\EducationEntry{Teacher}{2004-2005}{Teacher Mathematic Teacher, Software Teacher, Computation Teacher}
+{Profesor de Informática: 1- Computation Teacher I (Basic Informatic) - ISIS (Private Institute Third); 2- Computation Teacher II (Software Applications) - ISIS (Private Institute Third); 3- Computation Teacher III (Linux and Windows Net) - ISIS (Private Institute Third); Profesor de Software y Matemática (Mathematics and Software Teacher): 1- Course, Software Teacher: Adaptación al ambiente de trabajo en ENET 2 (technical school); 2- Course, Mathematic Teacher of 8-EGB  (two grades)- School 119 (C. R.); 3- Course, Mathematic Teacher of 9-EGB (two grades)- School 119 (C. R.).
+}
+\sepspace
+
+%2000-2003 - DeSoft Development of Software
+\EducationEntry{DeSoft}{2000-2003}{Developer, Technical Leader}{
+Developer, Technical Leader}
+\sepspace
 
 %%% Skills
 %%% ------------------------------------------------------------
 \NewPart{Skills}{}
 
-\SkillsEntry{Languages}{Dutch (mother tongue)}
-\SkillsEntry{}{English (fluent)}
-\SkillsEntry{}{German (fluent)}
+\SkillsEntry{Languages}{Spanish (mother tongue)}
+\SkillsEntry{}{English (level 2)}
 
-\SkillsEntry{Software}{\textsc{Matlab}, \LaTeX, \textsc{Ansys}, \textsc{Comsol}}
+
+\SkillsEntry{Software}{
+\textsc{Java}, \LaTeX, \textsc{Perl}, \textsc{MySQL}
+}
 
 
 %%% References
