Add information in es

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -114,37 +114,40 @@
 
 %%% Personal details
 %%% ------------------------------------------------------------
-\NewPart{Personal details}{}
+\NewPart{Datos personales}{}
 
-\PersonalEntry{Birth}{January 6, 1977}
-\PersonalEntry{Address}{5000 Cordoba, Argentina}
-\PersonalEntry{Phone}{(000) 000-0000}
+\PersonalEntry{Nacimiento}{January 6, 1977}
+\PersonalEntry{Localización}{5000 Cordoba, Argentina}
+\PersonalEntry{Teléfono}{(000) 000-0000}
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
-\PersonalEntry{Website}{\url{https://www.palminio.com}}
+\PersonalEntry{Sitio web}{\url{https://www.palminio.com}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com}}
 
 %%% Education
 %%% ------------------------------------------------------------
-\NewPart{Education}{}
+\NewPart{Educación}{}
 
 %2003 - Systems Engineer: School of Exact Sciences, UNPA-UACO National University. Graduated in 2003.
-\EducationEntry{Systems Engineer}{2003}{UNPA-UACO National University}{Systems Engineer: School of Exact Sciences, UNPA-UACO National University. Graduated in 2003.}
+\EducationEntry{Ingeniero de Sistemas}{2003}{UNPA-UACO}
+{Universidad Nacional de la Patagonia Austral - Unidad Académica Caleta Olivia}
 \sepspace
 
 %2000, Analyst: University Analyst Programmer: School of Engineering, UNPSJB University National. Graduated in 2000.
-\EducationEntry{Analyst}{2000}{UNPSJB University National}{Analyst: University Analyst Programmer: School of Engineering, UNPSJB University National. Graduated in 2000.}
+\EducationEntry{Analista de Sistemas}{2000}{UNPSJB}
+{University National de la Patagonia San Juan Bosco}
 \sepspace
 
 %1995, Electromechanical: Electromechanical technician: School ENET 1. Graduated in 1995.
-\EducationEntry{Electromechanical}{1995}{School ENET 1}{Electromechanical: Electromechanical technician: School ENET 1. Graduated in 1995.}
+\EducationEntry{Electromecánico}{1995}{ENET 1}
+{Técnico mecánico eletricista}
 \sepspace
 
 %%% Work experience
 %%% ------------------------------------------------------------
-\NewPart{Work experience}{}
+\NewPart{Experiencia laboral}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\EducationEntry{Globant}{2015-present}{Technical Leader, Focal point and Java developer}
+\EducationEntry{Globant}{2015-actual}{Technical Leader, Focal point and Java developer}
 {Technical Lead on Perl/Java Technologies in a context of LAN airline at Globant Company. The Perl Technologies used was Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Project related to data collection from web site to send to Google Analytic.}
 \sepspace
 
@@ -185,17 +188,17 @@ Software Engineer}
 \sepspace
 
 %2006 Informatic forensics – Tribunal third in Comodoro Rivadavia City: Informatic Forensics.
-\EducationEntry{Tribunal third in Comodoro Rivadavia}{2006}{Informatic forensics}{
+\EducationEntry{Tribunal tercero de Comodoro Rivadavia}{2006}{Informático Forense}{
 Tribunal third in Comodoro Rivadavia City: Informatic Forensics}
 \sepspace
 
 %2004-2006 24 months in Municipality of Comodoro Rivadavia city, Systems Engineer Juridical Informatics, Technical Leader.
-\EducationEntry{Municipality of Comodoro Rivadavia}{2004-2006}{Systems Engineer Juridical Informatics, Technical Leader}
+\EducationEntry{Municipalidad de Comodoro Rivadavia}{2004-2006}{Systems Engineer Juridical Informatics, Technical Leader}
 {Technical lead at Digesto Project (and VB Developer and PHP Developer) in context of legal area (Asesoría letrada) of a town hall (Municipality).}
 \sepspace
 
 %2004-2005 Teacher Mathematic Teacher, Software Teacher, Computation Teacher.
-\EducationEntry{Teacher}{2004-2005}{Teacher Mathematic Teacher, Software Teacher, Computation Teacher}
+\EducationEntry{Profesor}{2004-2005}{Teacher Mathematic Teacher, Software Teacher, Computation Teacher}
 {Profesor de Informática: 1- Computation Teacher I (Basic Informatic) - ISIS (Private Institute Third); 2- Computation Teacher II (Software Applications) - ISIS (Private Institute Third); 3- Computation Teacher III (Linux and Windows Net) - ISIS (Private Institute Third); Profesor de Software y Matemática (Mathematics and Software Teacher): 1- Course, Software Teacher: Adaptación al ambiente de trabajo en ENET 2 (technical school); 2- Course, Mathematic Teacher of 8-EGB  (two grades)- School 119 (C. R.); 3- Course, Mathematic Teacher of 9-EGB (two grades)- School 119 (C. R.).
 }
 \sepspace
@@ -207,7 +210,7 @@ Developer, Technical Leader}
 
 %%% Skills
 %%% ------------------------------------------------------------
-\NewPart{Skills}{}
+\NewPart{Otras Experiencias y Conocimientos}{}
 
 \SkillsEntry{Languages}{Spanish (mother tongue)}
 \SkillsEntry{}{English (level 2)}
@@ -220,6 +223,6 @@ Developer, Technical Leader}
 
 %%% References
 %%% ------------------------------------------------------------
-\NewPart{References}{}
+\NewPart{Referencias}{}
 Available upon request
 \end{document}
