--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -123,6 +123,13 @@
 \PersonalEntry{Website}{\url{https://www.palminio.com}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com}}
 
+%%% Presentation
+%%% ------------------------------------------------------------
+\NewPart{Presentation}{
+I'm a Systems Engineer graduated at the “National University of Southern Patagonia”, Argentina. So that's it, I am from Argentina. 
+	As Systems Engineer I'm prepared to apply System Engineering, which is “an interdisciplinary approach and means to enable the realization of successful systems.”; And this generally includes the Software Engineering, that is “the application of a systematic, disciplined, quantifiable approach to the development, operation, and maintenance of software”. For this reason I have worked in both the software factories and in other areas.
+}
+
 %%% Education
 %%% ------------------------------------------------------------
 \NewPart{Education}{}
@@ -185,8 +192,8 @@ Software Engineer}
 \sepspace
 
 %2006 Informatic forensics – Tribunal third in Comodoro Rivadavia City: Informatic Forensics.
-\EducationEntry{Tribunal third in Comodoro Rivadavia}{2006}{Informatic forensics}{
-Tribunal third in Comodoro Rivadavia City: Informatic Forensics}
+\EducationEntry{Tribunal third in Comodoro Rivadavia}{2006}{Informatic forensic}{
+Tribunal third in Comodoro Rivadavia City: Forensic Engineering}
 \sepspace
 
 %2004-2006 24 months in Municipality of Comodoro Rivadavia city, Systems Engineer Juridical Informatics, Technical Leader.
@@ -205,21 +212,73 @@ Tribunal third in Comodoro Rivadavia City: Informatic Forensics}
 Developer, Technical Leader}
 \sepspace
 
+
 %%% Skills
 %%% ------------------------------------------------------------
 \NewPart{Skills}{}
 
 \SkillsEntry{Languages}{Spanish (mother tongue)}
+
 \SkillsEntry{}{English (level 2)}
 
-
-\SkillsEntry{Software}{
-\textsc{Java}, \LaTeX, \textsc{Perl}, \textsc{MySQL}
+\SkillsEntry{Experience}{}
+\SkillsEntry{}{
+Regarding my professional career in general, I can say that I have around ten years of experience developing software, working widely not only in Software Engineering but also as part of Information Technology projects. I can tell you that I've worked for different international companies such as Santex America S.A., Motorola Mobility, IBA Entertainment limited and Globant. Also, I've had experience working remotely as a freelancer. Throughout this period, I participated in different software engineering roles. 
 }
 
+\SkillsEntry{Technologies}{}
+\SkillsEntry{}{
+Regarding my general experience on technologies, I've had wide exposure to a variety of software technologies and architectures, in a hands-on and directly-involved way. In other words I've used different types of technology and a lot of programming languages, such as Java, Perl, PHP, Python, C, etc.; but my favorite one is Java and all its related technologies, such as different framework to Java Enterprise Edition Platform (J2EE). This During the period that I work with Java I developed Web System using, among other things, the following technologies and frameworks: Hibernate, Maven, JavaScript, ExtJs, XML, JSF, Servlet, Spring, Resin, Tomcat, Oracle DB, MySQL DB, and PostgreSQL DB, JUnit, Mocks, SOA, etc.
+}
+
+\SkillsEntry{Domain Problems}{}
+\SkillsEntry{}{
+	In my work history I've had experience in various domain problems. I made or worked in “airline” to LAN company, “Point Of Sale System” for a manufacturing company, “Machinery Maintenance System” for an oilfield services company, “Cemetery Management Systems” for a Municipal organization of a cemetery, “Legal Digest System” for a Town Council and Legislature, “Credit Card System” for a Credit Company, “Purchasing Management System” for a City Council,  “Business Process Management” System to Data Management Consultant Company, “System for Telecommunications and Internet Service Provider” for Telecommunications Companies and “Sportsbetting System” for an Online Betting Company.
+}
+
+%%% Top Technical Skills
+%%% ------------------------------------------------------------
+\NewPart{Top Technical Skills}{
+About my Top technical skill I can mention Flexible Intelligence, Complex Problem Solving, Creative Thinking and Team player.
+}
+
+\SkillsEntry{Flexible Intelligence}{
+I have a FAST LEARNING CURVE and ease to learn about any topic. This skill makes me ADAPTABLE and FLEXIBLE for perform in different work environments and different types of processes and technologies. In other words, I 'm always being open to change and to considerable variety in the workplace. I always think that I must to have the ability to adapt to change quickly and adjust work accordingly in a positive manner. There are three reasons why a software engineer should be a constant learner : a) A Systems Engineer must be able to understand different problem domains and each system is analyzed may involves new features and processes that are necessary to learn;  b) There is a low probability of participating in various projects and technology do not change; and c) The computer market behaves as the exponential growth of Moore's Law, this means that the technology and knowledge are improving at exponential rates. I take into consideration that the Systems Engineering should go hand in hand with Flexible Intelligence skill. In this regard, I have the aptitude and WILLINGNESS TO LEARN in a way beneficial to the business, the department and their own career. I'm able to effectively manage expectations and their own time, prioritizing according to communicated business requirements dynamically. 
+}
+
+\SkillsEntry{Complex Problem Solving}{
+I think so that a good engineer has sharp problem solving skills. An engineer is frequently called upon solely to address problems, and they must be able to figure out where the problem stems from and quickly develop a solution. I am qualified to identifying complex problems in systems and reviewing related information to develop and evaluate options and implement solutions. Part of my activities as a developer have been to reduce code complexity and duplication, and to do structure and organizing software. To achieve this I have increased best practice utilization, reduced violations, avoided the carryover error, reduced defect rate and used proven development pattern. Also, from this perspective, I am trained to solve system problems using CRITICAL THINKING, that is scientific and logical thinking with Inquisitive mind. Also using aptitude for SYSTEMS THINKING and reasoning to identify the strengths and weaknesses of alternative solutions, conclusions or approaches to problems. Also, I have STRESS TOLERANCE and I've no problems with uncertainty and chaos. I consider that my profession relies on managing uncertainty and order the chaos. For this reason, I am familiar with uncertainty and THRIVE IN AMBIGUITY. In my working life I always have in my mind the following mantra (or slogan): “CHANGE THE COMPLEXITY TO MAKE IT SIMPLE AND ORDERED”. The “Order Emerges From Chaos” and for that we are Systems Engineers and Software Engineers, to make it possible.
+}
+
+\SkillsEntry{Creative Thinking}{
+I have CREATIVE THINKING and alternative thinking to develop new ideas for and answers to work-related problems. At different times in my profession I have used creative thinking skills to contribute to a problem-solving software engineering team in a development project. I think so that a good engineer should be creative and can think of new and innovative ways to develop new systems and make existing things work more efficiently. Moreover, creating software requires creativity to make up solutions, designing new architectures, proposing new structures, implement high-level ideas and generate innovations. For all this creative thinking is necessary.
+}
+\SkillsEntry{Team Player}{
+I like the team-oriented work environment.
+}
 
 %%% References
 %%% ------------------------------------------------------------
 \NewPart{References}{}
-Available upon request
+
+The following are some LinkedIn recommendations of my colleagues:
+
+Senior Staff Software Engineer at Motorola Mobility:
+«I had the chance to work closely with Dario during 2010 and 2011. Over that period of time he demonstrated high proficiency in J2EE, JavaScript, ExtJS programming languages, and technologies like TR69 and OMADM. Dario consistently completed his assignments, in particular the most technically challenging ones, which he was able to tackle thanks to one of his most important skills: creative thinking. I thank him for his contributions and extend my recommendation to whom it may concern.» 
+May 1, 2012, Pablo Aghemo managed Dario indirectly at Motorola.
+
+Staff Software Engineer at Motorola Mobility:
+«I had the pleasure of working with Dario in several projects and in all that time he was consistently on schedule with his assignments. In those projects Dario always was a proactive professional. I think that he is a reliable person, very responsible and talented developer.»  
+May 25, 2012, Diego Cohen worked directly with Dario at Motorola.
+
+QA Engineer at Motorola Mobility:
+«I would recommend Dario for whatever role he chooses, without any hesitation or concern for his success. His personality and versatility are remarkable skills that will take any project to success.»  
+December 2, 2009, Franco Santi  worked directly with Dario at Motorola.
+
+Software Engineer at Deviget LLC (2014):
+«Dario is a highly skilled Systems professional. He has an extense background and experience on Software development, always focused and commited to achieve the expected results. I would recommend Dario to be part of any development team that need quick results as well as high quality products.»  
+November 24, 2007, David Alderete was with another company when working with Dario at DeSoft.
+Contact email:: david.ald@gmail.com; Contact celphone: +54-0351-3512445790
+
+
 \end{document}
