--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -101,12 +101,14 @@
 %		\includegraphics[width=0.15\textwidth]{photo}
 %\end{wrapfigure}
 
+%%% Photo
 \begin{figure}
 	\hfill
 	\includegraphics[width=0.2\textwidth]{photo}
 	\vspace{-7cm}
 \end{figure}
 
+%%% Title
 \MyName{Dario Palminio}
 \MySlogan{Curriculum Vitae}
 
@@ -116,12 +118,12 @@
 %%% ------------------------------------------------------------
 \NewPart{Datos personales}{}
 
-\PersonalEntry{Nacimiento}{January 6, 1977}
+\PersonalEntry{Nacimiento}{6 de Enero de 1977}
 \PersonalEntry{Localización}{5000 Cordoba, Argentina}
 \PersonalEntry{Teléfono}{(000) 000-0000}
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
 \PersonalEntry{Sitio web}{\url{https://www.palminio.com}}
-\PersonalEntry{linkedin}{\url{https://www.linkedin.com}}
+\PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
 
 %%% Education
 %%% ------------------------------------------------------------
@@ -147,65 +149,86 @@
 \NewPart{Experiencia laboral}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\EducationEntry{Globant}{2015-actual}{Technical Leader, Focal point and Java developer}
-{Technical Lead on Perl/Java Technologies in a context of LAN airline at Globant Company. The Perl Technologies used was Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Project related to data collection from web site to send to Google Analytic.}
+\EducationEntry{Globant}{2015-actual}{Technical Leader, Focal point y Java developer}
+{1) Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
+2) Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.}
+
 \sepspace
 
 %2012-2014 IBA Entertainment limited as Software Engineer Freelancer.
 \EducationEntry{IBA Entertainment limited}{2012-2014}{Software Engineer Freelancer}
-{Software Engineer (as Contractor Freelancer) on Perl Technologies in a context of sportsbetting (Bet3000.com). Some technologies: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Development in Bet3000 Project (www.bet3000.com) to International Betting Association.}
+{Ingeniero de Software (como Freelancer/Monotributista) en tecnologías Perl para sistema de sportsbetting (Bet3000.com). Algunas tecnologías usadas: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Desarrollo en el proyecto Bet3000 (www.bet3000.com) para la empresa International Betting Association.}
+
 \sepspace
 
 %2013-2014 Make IT Coop. As Associate, Secretary
 \EducationEntry{Make IT Coop.}{2013-2014}{Associate, Secretary}{
-Software Engineer}
+Socio fundador y Secretario en Cooperativa Make IT Coop. También desarrollo en diferentes tecnologías web.}
+
 \sepspace
 
 %2008-2010 Motorola Mobility as Software Engineer.
 \EducationEntry{Motorola Mobility}{2008-2010}{Software Engineer}
-{Software Engineering on Java Technologies (J2EE in a context of telecommunications mobile devices) at Motorola Mobility of Argentina S.A.}
+{Ingeniero de Software en desarrollos Java (J2EE para dispositivos móviles y sistema de telecomunicaciones) en Motorola Mobility de Argentina S.A.}
+
 \sepspace
 
 %2008-2010 Motorola S.C.A (Contractor Vates) as Software Engineer.
 \EducationEntry{Motorola S.C.A (Contractor Vates)}{2008-2010}{Software Engineer}
-{Java development (J2SE and J2EE in a context of telecommunications mobile devices)}
+{Desarrollador Java (J2SE and J2EE para dispositivos móviles y sistema de telecomunicaciones)}
+
 \sepspace
 
 %2008 Vates (www.vates.com) as Systems Engineer.
 \EducationEntry{Vates}{2008}{Systems Engineer}
-{Java Developer in context of system business process management.}
+{Desarrollador Java para sistema de Gestión de Compras Municipal.}
+
 \sepspace
 
 %2007 Santex America S.A. (santexgroup.com) as Software Engineer: Java Developer.
 \EducationEntry{Santex America S.A.}{2007}{Software Engineer, Java Developer}
-{1) Java Developer in context of system business process management. 2) Instructor of "Oracle 9i: Build J2EE Applications" at InMotion, Santiago de Chile (Chile);
-3) Instructor of "Oracle AS 10g: R3 Build J2EE Applications" at Oracle, Buenos Aires (Arg.).}
+{1) Desarrollador Java para sistema de Gestión de Procesos de Negocio.}
+
 \sepspace
 
 %2007 AYI & Asociados (BADI S.R.L) as Software Engineer: Java Developer, Computer Consultant Java.
 \EducationEntry{AYI and Asociados (BADI S.R.L)}{2007}{Software Engineer, Java Developer, Computer Consultant Java}
-{Oracle Java Developer (J2EE) in context of credit card company (Tarjeta Naranja).}
+{1) Desarrollador Java (J2EE) y Oracle para proyecto de Tarjeta Naranja.
+2) Capacitador de "Oracle 9i: Build J2EE Applications" en InMotion, Santiago de Chile (Chile);
+3) Capacitador de "Oracle AS 10g: R3 Build J2EE Applications" en oficinas de Oracle, Buenos Aires (Arg.).
+}
+
 \sepspace
 
 %2006 Informatic forensics – Tribunal third in Comodoro Rivadavia City: Informatic Forensics.
 \EducationEntry{Tribunal tercero de Comodoro Rivadavia}{2006}{Informático Forense}{
-Tribunal third in Comodoro Rivadavia City: Informatic Forensics}
+Informático Forense para el tribunal tercero de Comodoro Rivadavia}
+
 \sepspace
 
 %2004-2006 24 months in Municipality of Comodoro Rivadavia city, Systems Engineer Juridical Informatics, Technical Leader.
 \EducationEntry{Municipalidad de Comodoro Rivadavia}{2004-2006}{Systems Engineer Juridical Informatics, Technical Leader}
-{Technical lead at Digesto Project (and VB Developer and PHP Developer) in context of legal area (Asesoría letrada) of a town hall (Municipality).}
+{Líder Técnico en Proyecto de Digesto Legislativo Municipal en Asesoría letrada de la Municipalidad de Comodoro Rivadavia.}
+
 \sepspace
 
 %2004-2005 Teacher Mathematic Teacher, Software Teacher, Computation Teacher.
 \EducationEntry{Profesor}{2004-2005}{Teacher Mathematic Teacher, Software Teacher, Computation Teacher}
-{Profesor de Informática: 1- Computation Teacher I (Basic Informatic) - ISIS (Private Institute Third); 2- Computation Teacher II (Software Applications) - ISIS (Private Institute Third); 3- Computation Teacher III (Linux and Windows Net) - ISIS (Private Institute Third); Profesor de Software y Matemática (Mathematics and Software Teacher): 1- Course, Software Teacher: Adaptación al ambiente de trabajo en ENET 2 (technical school); 2- Course, Mathematic Teacher of 8-EGB  (two grades)- School 119 (C. R.); 3- Course, Mathematic Teacher of 9-EGB (two grades)- School 119 (C. R.).
+{Profesor: 
+1- Computación I (Basic Informatic) - ISIS (Instituto terciario privado); 
+2- Computación II (Aplicaciones de Software) - ISIS (Instituto terciario privado); 
+3- Computación III (Linux y Windows Net) - ISIS (Instituto terciario privado); 
+4- Profesor de Software: Adaptación al ambiente de trabajo en ENET 2 (Escuela Técnica); 
+5- Profesor de Matemática de 8-EGB  (dos cursos)- Escuela 119 (C. R.); 
+6- Profesor de Matemática de 9-EGB (dos cursos)- Escuela 119 (C. R.).
 }
+
 \sepspace
 
 %2000-2003 - DeSoft Development of Software
 \EducationEntry{DeSoft}{2000-2003}{Developer, Technical Leader}{
-Developer, Technical Leader}
+Desarrollador y Líder técnico en proyectos de desarrollo de software para empresas de terserización petrolera y máquinas viales.}
+
 \sepspace
 
 %%% Skills
@@ -215,6 +238,7 @@ Developer, Technical Leader}
 \SkillsEntry{Languages}{Spanish (mother tongue)}
 \SkillsEntry{}{English (level 2)}
 
+\sepspace
 
 \SkillsEntry{Software}{
 \textsc{Java}, \LaTeX, \textsc{Perl}, \textsc{MySQL}
@@ -224,5 +248,8 @@ Developer, Technical Leader}
 %%% References
 %%% ------------------------------------------------------------
 \NewPart{Referencias}{}
-Available upon request
+Para más información ver el prefil en linkedin.
+
+\sepspace
+
 \end{document}
