Add Certification-ScrumMaster reference

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -124,6 +124,7 @@
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
 \PersonalEntry{Website}{\url{https://www.palminio.com}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
+\PersonalEntry{CScrumMaster}{\url{https://www.scrumalliance.org/community/profile/dpalminio}}
 
 %%% Presentation
 %%% ------------------------------------------------------------
@@ -223,6 +224,13 @@ Developer, Technical Leader}
 \SkillsEntry{\large{\textbf{Languages}}}{Spanish (mother tongue)}
 
 \SkillsEntry{}{English (level 2)}
+
+\sepspace
+
+\SkillsEntry{\large{\textbf{Certifications}}}{}
+\SkillsEntry{}{
+Certified ScrumMaster by SCRUM ALLIANCE
+}
 
 \sepspace
 
