--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -124,6 +124,7 @@
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
 \PersonalEntry{Sitio web}{\url{https://www.palminio.com}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
+\PersonalEntry{CScrumMaster}{\url{https://www.scrumalliance.org/community/profile/dpalminio}}
 
 %%% Education
 %%% ------------------------------------------------------------
@@ -235,13 +236,21 @@ Desarrollador y Líder técnico en proyectos de desarrollo de software para empr
 %%% ------------------------------------------------------------
 \NewPart{Otras Experiencias y Conocimientos}{}
 
-\SkillsEntry{Languages}{Spanish (mother tongue)}
+\SkillsEntry{{\textbf{Certificaciones}}}{}
+\SkillsEntry{}{
+\large{\textbf{Certified ScrumMaster por SCRUM ALLIANCE}}\newline
+          https://www.scrumalliance.org/community/profile/dpalminio
+}
+
+\sepspace
+
+\SkillsEntry{\textbf{Languages}}{Spanish (mother tongue)}
 \SkillsEntry{}{English (level 2)}
 
 \sepspace
 
 \SkillsEntry{Software}{
-\textsc{Java}, \LaTeX, \textsc{Perl}, \textsc{MySQL}
+\textsc{Java}, \LaTeX, \textsc{Perl}, \textsc{MySQL}, etc.
 }
 
 
